query_optimizer/tests/execution_generator/Index.test
#   Copyright 2016, Quickstep Research Group, Computer Sciences Department,
#     University of Wisconsin—Madison.
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

CREATE TABLE foo3 (col1 INT, col2 INT);
CREATE INDEX idx1 ON foo3(col1) USING CSBTREE;
SELECT * FROM foo3;
--
+-----------+-----------+
|col1       |col2       |
+-----------+-----------+
+-----------+-----------+
==
CREATE INDEX idx2 ON foo3(col1) USING CSBTREE;
--
ERROR: The relation foo3 already defines this index on the given attribute(s).
==
CREATE INDEX idx2 ON foo3(col2) USING CSBTREE;
SELECT * FROM foo3;
--
+-----------+-----------+
|col1       |col2       |
+-----------+-----------+
+-----------+-----------+
==
# Compound index creation should succeed, even when
# separate indices are defined on individual attributes.
CREATE INDEX idx3 ON foo3(col1, col2) USING CSBTREE;
SELECT * FROM foo3;
--
+-----------+-----------+
|col1       |col2       |
+-----------+-----------+
+-----------+-----------+
==
# Bloom filter index is not currently implemented.
CREATE INDEX bloomIndex ON test(int_col) USING BLOOMFILTER
--
ERROR: Bloom Filter index is not yet implemented (1 : 48)
...INDEX bloomIndex ON test(int_col) USING BLOOMFILTER
                                           ^
==
# Specifying no columns will index all the columns.
CREATE INDEX smaIndex ON test USING SMA;
SELECT * FROM test;
--
+-----------+--------------------+---------------+------------------------+--------------------+
|int_col    |long_col            |float_col      |double_col              |char_col            |
+-----------+--------------------+---------------+------------------------+--------------------+
|       NULL|                   0|              0|                    NULL|          0 0.000000|
|         -1|                   1|              1|                      -1|         -1 1.000000|
|          2|                   4|     1.41421354|      2.8284271247461903|          2 1.414214|
|         -3|                   9|     1.73205078|      -5.196152422706632|         -3 1.732051|
|          4|                  16|              2|                       8|          4 2.000000|
|         -5|                  25|     2.23606801|     -11.180339887498949|         -5 2.236068|
|          6|                  36|     2.44948983|      14.696938456699067|          6 2.449490|
|         -7|                  49|     2.64575124|     -18.520259177452136|         -7 2.645751|
|          8|                  64|     2.82842708|      22.627416997969522|          8 2.828427|
|         -9|                  81|              3|                     -27|         -9 3.000000|
|       NULL|                 100|      3.1622777|                    NULL|         10 3.162278|
|        -11|                 121|     3.31662488|       -36.4828726939094|        -11 3.316625|
|         12|                 144|     3.46410155|      41.569219381653056|         12 3.464102|
|        -13|                 169|     3.60555124|     -46.872166581031856|        -13 3.605551|
|         14|                 196|      3.7416575|       52.38320341483518|         14 3.741657|
|        -15|                 225|     3.87298346|     -58.094750193111253|        -15 3.872983|
|         16|                 256|              4|                      64|         16 4.000000|
|        -17|                 289|     4.12310553|     -70.092795635500224|        -17 4.123106|
|         18|                 324|      4.2426405|      76.367532368147124|         18 4.242641|
|        -19|                 361|     4.35889912|      -82.81907992727281|        -19 4.358899|
|       NULL|                 400|     4.47213602|                    NULL|         20 4.472136|
|        -21|                 441|      4.5825758|     -96.234089594072643|        -21 4.582576|
|         22|                 484|     4.69041586|      103.18914671611546|         22 4.690416|
|        -23|                 529|     4.79583168|     -110.30412503619254|        -23 4.795832|
|         24|                 576|     4.89897966|      117.57550765359254|         24 4.898979|
+-----------+--------------------+---------------+------------------------+--------------------+
==
# SMA can also specify an index on selected columns.
CREATE INDEX smaIndex2 ON test(int_col,long_col) USING SMA;
SELECT * FROM test;
--
+-----------+--------------------+---------------+------------------------+--------------------+
|int_col    |long_col            |float_col      |double_col              |char_col            |
+-----------+--------------------+---------------+------------------------+--------------------+
|       NULL|                   0|              0|                    NULL|          0 0.000000|
|         -1|                   1|              1|                      -1|         -1 1.000000|
|          2|                   4|     1.41421354|      2.8284271247461903|          2 1.414214|
|         -3|                   9|     1.73205078|      -5.196152422706632|         -3 1.732051|
|          4|                  16|              2|                       8|          4 2.000000|
|         -5|                  25|     2.23606801|     -11.180339887498949|         -5 2.236068|
|          6|                  36|     2.44948983|      14.696938456699067|          6 2.449490|
|         -7|                  49|     2.64575124|     -18.520259177452136|         -7 2.645751|
|          8|                  64|     2.82842708|      22.627416997969522|          8 2.828427|
|         -9|                  81|              3|                     -27|         -9 3.000000|
|       NULL|                 100|      3.1622777|                    NULL|         10 3.162278|
|        -11|                 121|     3.31662488|       -36.4828726939094|        -11 3.316625|
|         12|                 144|     3.46410155|      41.569219381653056|         12 3.464102|
|        -13|                 169|     3.60555124|     -46.872166581031856|        -13 3.605551|
|         14|                 196|      3.7416575|       52.38320341483518|         14 3.741657|
|        -15|                 225|     3.87298346|     -58.094750193111253|        -15 3.872983|
|         16|                 256|              4|                      64|         16 4.000000|
|        -17|                 289|     4.12310553|     -70.092795635500224|        -17 4.123106|
|         18|                 324|      4.2426405|      76.367532368147124|         18 4.242641|
|        -19|                 361|     4.35889912|      -82.81907992727281|        -19 4.358899|
|       NULL|                 400|     4.47213602|                    NULL|         20 4.472136|
|        -21|                 441|      4.5825758|     -96.234089594072643|        -21 4.582576|
|         22|                 484|     4.69041586|      103.18914671611546|         22 4.690416|
|        -23|                 529|     4.79583168|     -110.30412503619254|        -23 4.795832|
|         24|                 576|     4.89897966|      117.57550765359254|         24 4.898979|
+-----------+--------------------+---------------+------------------------+--------------------+
